# integration

./: README.md  agent-card.json  agent-manifest.json  pyproject.toml
mcp-server/: .gitignore  README.md  index.js  package.json  server.json
python-sdk/: README.md  __init__.py  client.py
typescript-sdk/: README.md  index.ts  package.json  tsconfig.json
