[project]
name = "synmerco"
version = "0.1.0"
description = "Just Synmerco it. Python SDK for AI agent escrow, reputation, and dispute resolution."
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Synmerco", email = "hello@synmerco.com"}]
keywords = ["ai-agents", "escrow", "trust", "reputation", "payments", "mcp", "x402"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
]
readme = "README.md"

[project.urls]
Homepage = "https://synmerco.com"
Documentation = "https://synmerco.com"
Repository = "https://github.com/synmerco/integration"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "respx>=0.21"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
